--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-    "name": "DDG-Search",
+    "name": "Qwant-Search",
     "version": "1.0.0",
-    "description": "Allows you search for a message or selection via DuckDuckGo.",
-    "author": "Logge",
+    "description": "Allows you search for a message or selection via Qwant.",
+    "author": "Logge, A bit modified by PoorPocketsMcNewHold",
     "license": "MIT"
 }
